--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+odds.converter v1.3 (Release date: 2015-10-17)
+==============
+
+Changes:
+
+* Added functionality to odds.fv(). It can now handle data.frames as input and vectors
+
+
+
 odds.converter v1.2 (Release date: 2015-09-25)
 ==============
 
